...
                android:textColor="#888888"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Username"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:background="@drawable/input_field"/>

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Password"
                android:layout_marginTop="12dp"
                android:inputType="textPassword"
                android:padding="12dp"
                android:background="@drawable/input_field"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Login"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="22dp"
...
