appId: com.example.soen345
---
- launchApp

# Go to login page
- tapOn:
    id: "loginMainButton"

# Login
- tapOn:
    id: "loginUsername"
- inputText: "bhumi"

- tapOn:
    id: "loginPassword"
- inputText: "1234567"

- tapOn:
    id: "loginButton"

- tapOn:
    id: "navManageEvents"

# Verify search page opened
- assertVisible: "Manage Events"

- tapOn:
    id: "addEventButton"

- assertVisible: "Create a new event"

- tapOn:
    id: "eventTitleEditText"
- inputText: "Comedy All Stars"

- tapOn:
    id: "eventOrganizerEditText"
- inputText: "Star Productions"

- tapOn:
    id: "categoryAutoComplete"

- assertVisible:
    text: "Theater"

- tapOn:
    text: "Theater"

- tapOn:
    id: "eventDateEditText"

- tapOn: "Next month"

# 3. Select the 28th
- tapOn: "28"

# 4. Confirm the selection
- tapOn: "OK"

- tapOn:
    id: "startTimeEditText"

- tapOn: "7"

- tapOn: "30"

- tapOn: "PM"

- tapOn: "OK"

- tapOn:
    id: "endTimeEditText"

- tapOn: "9"

- tapOn: "30"

- tapOn: "PM"

- tapOn: "OK"

- tapOn:
    id: "eventLocationEditText"
- inputText: "Deli Planet"

- tapOn:
    id: "eventDescriptionEditText"
- inputText: "Get ready for a night of non-stop laughter as top-tier comedians take the stage to deliver their sharpest wit and most hilarious anecdotes. It is the perfect escape from the daily grind, promising high energy, relatable humor, and a sore face from smiling."

- tapOn:
    id: "publishEventButton"

- assertVisible: "Manage Events"